# xml-watcher

./: .gitignore  Cargo.toml  README.md  flake.nix  xml-watcher.sh
.github/workflows/: oci.yml
src/: main.rs
