[package]
name = "xml-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
